--- a/portfolio004-1/package.json
+++ b/portfolio004-1/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.0",
+    "@studio-freight/react-lenis": "^0.0.43",
+    "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.3",
     "three": "^0.160.1"
   },
   "devDependencies": {
