--- a/portfolio004-1/package.json
+++ b/portfolio004-1/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.3",
+    "split-type": "^0.3.4",
     "three": "^0.160.1"
   },
   "devDependencies": {
